# 3DCurves

./: .gitignore  CMakeLists.txt  README.md
include/: 3D_Base.h  3D_Circle.h  3D_Ellipse.h  3D_Helix.h
source/: 3D_Base.cpp  3D_Circle.cpp  3D_Ellipse.cpp  3D_Helix.cpp  main.cpp
